# FastAPI-app

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: alembic.ini  base_responses.py  config.py  database.py  global_models.py  main.py
app/auth/: auth.py  config.py  database.py  manager.py  models.py  schemas.py  utils.py
app/chat/: models.py  router.py  schemas.py  ws_connect.py  ws_messages.txt
app/migrations/: env.py
app/migrations/versions/: 45b75c22014a_initial.py  64da004085d7_init.py  7ddf4bc2fffe_initial.py  94fa9c52d54d_initial.py  d8c49ea35c47_init.py  f32af11496b4_init.py
app/models/: models.py
app/operations/: models.py  router.py  schemas.py
app/pages/: router.py
app/tasks/: router.py  tasks.py
app/templates/: chat.html
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: 412c41b06a19_set_default_to_date.py  640996ebd2cf_initial.py  7db6bef9eba1_username_not_unique.py  800596d54cf8_init.py  9fc2602e2b09_add_messages.py  f62f5f2dbaab_init.py
tests/: conftest.py  test_auth.py  test_operations.py
